@@ -207,4 +207,9 @@ max_log_size 65536
 # mcast_change_port 11111
 # mcast_change_group 224.1.1.1 
 
+# max_queue_files (250 by default)
+# When server have more than max_queue_files in incoming directory, skips the read   
+# the directory to avoid filesystem overhead.
+
+max_queue_files 250
 
